# rs-zip

./: .gitignore  Cargo.toml  DESCRIPTION.md  README.md  bench_analysis.md
benches/: benchmarks.rs
src/: cli.rs  compression.rs  decompression.rs  file_io.rs  lib.rs  main.rs
